# scope-example

./: .gitignore  README.md  model.yaml  models_config.py  pyproject.toml  test_pipeline.py
