[project]
name = "test-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10.12"
dependencies = [
    "daydream-scope[core]",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "opencv-python>=4.8.0",
]

[tool.uv.sources]
daydream-scope = { git = "https://github.com/daydreamlive/scope", rev = "rafal/packages" }
